--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,63 +1,8 @@
 /* STYLE CSS*/
 
-
-/* ----------------------------- */
-/* -----DEFAULT SETUP ----------*/
-/* ------------------------------- */
-
-*{
-    padding: 0px;
-    margin: 0px;
-    box-sizing: border-box;
-}
-
-html{
-    font-family: 'Lato', sans-serif;
-    font-size: 20px;
-    color:black;
-    background-color: #ffffff;
-    text-rendering: optimizeLegibility;
-}
-
-body{
-    overflow-x: hidden;
-}
-
 /* ------------------------------------ */
 /* -----REUSABLE COMPONENT--------- */
 /* ----------------------------------- */
-
-.clearfix::after{
-    content:" ";
-    display: table;
-    clear: both;
-}
-
-.row{
-    max-width: 1140px;
-    margin: 1px auto;
-}
-
-h1, h2, h3{
-    text-transform: uppercase;
-    text-align: center;
-    margin: 30px;
-    color: rgb(8, 188, 243);
-}
-
-h2:after{
-    content: " ";
-    display: block;
-    width: 150px;
-    height: 0px;
-    background-color: rgba(45,95,93);
-    margin: 0 auto;
-    margin-top: 5px;
-  }
-
-p{
-    margin-bottom: 20px;
-}
 
 .small-icon{
     text-align: center;
@@ -131,57 +76,6 @@ header{
     padding-bottom: 10px;;
 }
 
-/* .sticky .logo{
-    width: 300px;
-    float: left;
-    position: relative;
-    top: 35px;
-    left: 100px;
-    
-}
-.sticky .main-nav{
-    float: right;
-    list-style: none;  
-    margin-right: 120px;
-} */
-
-
-
-
-/*-------------------------------------------- */
-/* ------------------ABOUT SECTION------------------ */
-/* ------------------------------------------------ */
-
-.about-section p{
-    text-align: justify;
-}
-
-/*-------------------------------------------- */
-/* ------------------FOOTBALL CLUB FAVORITE------------------ */
-/* ------------------------------------------------ */
-
-.football-favorite{
-    /* position: relative; */
-    /* background-color: aqua; */
-}
-
-.football-favorite img{
-    padding-left: 85px;
-    width: 70%;
-    transition: all .2s;
-}
-
-.logo-fc:hover,
-.logo-fc:active{
-    transform: scale(1.2);
-    cursor: pointer;
-    padding-left: 70px;
-}
-
-.football-favorite p{
-    text-align: center;
-}
-
 /*-------------------------------------------- */
 /* ------------------GAME------------------ */
 /* ------------------------------------------------ */
@@ -190,11 +84,7 @@ header{
     background-color: #f4f4f4;
 }
 
-.game-image{
-    /* overflow: hidden; */
-}
-
-.game-image img{
+.game-section img{
     width: 99.9%;
     /* padding-left: 25px; */
     border: 3px solid rgb(79, 218, 228);
@@ -204,104 +94,18 @@ header{
     
 }
 
-.game-image p{
-    text-align: center;
-}
-
-.game-image img:hover,
-.game-image img:active{
+.game-section img:hover,
+.game-section img:active{
     filter: brightness(70%) blur(1px);
     cursor: pointer;
-    transform: scale(1.02);
-           
+    transform: scale(1.02);   
 }
 
-/*-------------------------------------------- */
-/* ------------------SPORT------------------ */
-/* ------------------------------------------------ */
-
-.sport-image{   
-    overflow: hidden;
-    position: relative;
+.game-section a[href]{
+    text-decoration: none;
+    color: #000 !important;
 }
 
-.sport-image p{
-    text-align: center;
-}
-
-.sport-image img{
-    width: 100%;
-    transition: all 1s;
-}
-
-.sport-image:hover img,
-.sport-image:active img{
-    transform: scaleX(1.1);
-    cursor: pointer;
-    filter: brightness(30%) blur(2px);
-}
-
-.sport-title{
-    transition: all .2s;
-}
-
-.sport-image:hover .sport-title,
-.sport-image:active .sport-title{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    color: #c2e1fd;
-}
-
-/*-------------------------------------------- */
-/* ------------------FAVORITE QUOTE------------------ */
-/* ------------------------------------------------ */
-
-.quote-section{
-    background-image:linear-gradient(45deg,rgba(2,33,64, 0.9) 55%,rgba(45,95,93,0.9)), url('../img/background3.jpeg');
-    background-position: center;
-    background-size: cover;
-    background-attachment: fixed;
-}
-
-.quote-section h2{
-    margin-bottom: 80px;
-}
-
-blockquote{
-    width: 95%;
-    position: relative;
-    font-family: 'Times New Roman', Times, serif;
-    font-style: italic;
-    font-size: 150%;
-    line-height: 140%;
-    color: white;
-}
-
-blockquote:before{
-    content: '\201C';
-    display: block;
-    font-size: 300%;
-    position: absolute;
-    top: -20px;
-    left: -20px;
-}
- 
-cite{
-    display: block;
-    color: #ffffff;
-    margin-top: 25px;
-    margin-bottom: 40px;
-}
- 
-cite img{
-    height: 50px;
-    border-radius: 50%;
-    border: 2px solid #265077;
-    vertical-align: middle;
-    margin-right: 5px;
-}
 
 /* ----------------------------------- */
 /* --------------CONTRACT--------------- */
@@ -312,10 +116,6 @@ cite img{
     color: #ffffff;
     font-family: 'Times New Roman', Times, serif;
     background-size: contain;   
-}
-
-.contract{
-    
 }
 
 .list-contract{
